--- a/manifest.json
+++ b/manifest.json
@@ -4,12 +4,12 @@
   "manifest_version": 2,
   "description": "专注于豆瓣",  
   "background": { "scripts": ["background.js"] },
-  "permissions": ["tabs"],
+  "permissions": ["http://*/","https://*/","tabs"],
   "content_scripts": [
     {
       "matches": ["https://*.douban.com/*","http://*.douban.com/*"],
       "css": ["common.css"],
-      "js": ["jquery.min.js","gm_jq_xhr.js","sdk.js","content_scripts.js"]
+      "js": ["jquery.min.js","content_scripts.js"]
     }
   ],
 	"icons": {
