--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {  
   "name": "木卫三 - 豆瓣",  
-  "version": "1.1.1",  
+  "version": "1.1.0",  
   "manifest_version": 2,
   "description": "专注于豆瓣",  
   "background": { "scripts": ["background.js"] },
@@ -19,8 +19,9 @@
 	},
    "page_action": {
         "default_icon": {
-            "19": "movie_19.png",
-            "38": "movie_38.png"
+            "16": "icon16.png",
+            "48": "icon48.png",
+            "128": "icon128.png"
         },
         "default_title":"专注于豆瓣"
     },
