--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,15 +1,15 @@
 {  
   "name": "木卫三 - 豆瓣",  
-  "version": "1.1.0",  
+  "version": "1.1.2",  
   "manifest_version": 2,
   "description": "专注于豆瓣",  
   "background": { "scripts": ["background.js"] },
   "permissions": ["http://*/","https://*/","tabs"],
   "content_scripts": [
     {
-      "matches": ["https://*.douban.com/*","http://*.douban.com/*"],
+      "matches": ["https://*.douban.com/*","http://*.douban.com/*","https://*.douban.fm/*"],
       "css": ["common.css"],
-      "js": ["jquery.min.js","content_scripts.js"]
+      "js": ["jquery.min.js","content_scripts.js","FileSaver.min.js"]
     }
   ],
 	"icons": {
